--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -62,7 +62,7 @@
     .large-12.columns
       %h4 Sign up for Beta account
       %p
-        We are currently in development and will be pushing oout new features throughout December 2016.
+        We are currently in development and will be pushing out new features throughout December 2016.
         If you sign up before the official launch of the
         %span.orange
           %strong VISUALIZER
@@ -75,6 +75,3 @@
           %input{placeholder: 'Your Email', type: 'text'}/
         .large-1.columns
           %a.orange-bg.button{href: '#'} Subscribe
-
-
-
