fixes formatting and removes id's from the properties list

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -176,6 +176,7 @@ li.property-name{
   border-bottom: #ccc dotted thin;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  padding-left: 0.5rem;
 }
 li.property-profile{
   color: #000;
